name:                spede
version:             0.1.0.0
-- synopsis:
description:         Reaction speed game known to many from Speden Spelit
homepage:            https://github.com/shiona/spede#readme
license:             BSD3
license-file:        LICENSE
author:              shiona
maintainer:          shiona
copyright:           2018 shiona
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable spede
  hs-source-dirs:      src
  other-modules:       Spede
                     , UI
                     , Graphics.Vty.Attributes.Color.Extra
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , containers
                     , microlens
                     , microlens-th
                     , random
                     , stm
                     , vty
